@@ -4,10 +4,21 @@ PROGRAMPATH=`dirname ${0}`
 
 source ${PROGRAMPATH}/../../base.sh
 
-MOD_CLASSPATH=${CLASSPATH}${PATHSEP}${PROGRAMPATH}/bin
+buffer_model=`"${CONFIGCMD[@]}" -s rob_buffer_generator -u`
 
-ant -q -f "${PROGRAMPATH}/build.xml" || exit 1
+if [[ ${buffer_model} == "proportional-restricted" ]]; then
 
-MOD_CLASSPATH=${MOD_CLASSPATH}${PATHSEP}${PROGRAMPATH}/../../essentials/javatools/lib/supercsv-with_src-1.52.jar
-MOD_CLASSPATH=${MOD_CLASSPATH}${PATHSEP}${PROGRAMPATH}/../../essentials/javatools/bin
-java -server -Xbatch -XX:+AggressiveOpts -cp ${MOD_CLASSPATH} net.lintim.main.${1} ${2}
+    PYTHONPATH="${PROGRAMPATH}/src/python:${CORE_DIR}/python"
+    env PYTHONPATH=${PYTHONPATH} python3 ${PROGRAMPATH}/src/python/robust_activities/main/proportional_buffer_some_activities.py $1
+
+else
+
+	MOD_CLASSPATH=${CLASSPATH}${PATHSEP}${PROGRAMPATH}/bin
+
+    ant -q -f "${PROGRAMPATH}/build.xml" || exit 1
+
+    MOD_CLASSPATH=${MOD_CLASSPATH}${PATHSEP}${LIB_DIR}/super-csv/super-csv-2.4.0.jar
+    MOD_CLASSPATH=${MOD_CLASSPATH}${PATHSEP}${SRC_DIR}/essentials/javatools/bin
+    java ${JFLAGS[@]} -cp ${MOD_CLASSPATH} net.lintim.main.${2} ${1}
+
+fi
